# infogeom

./: Cargo.toml  README.md
examples/: simplex_distances.rs
src/: lib.rs
