[package]
name = "infgeom"
version = "0.1.0"
edition = "2021"
description = "Information geometry primitives built from divergences (Fisher-Rao, alpha-geometry scaffolding)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/infgeom"
homepage = "https://github.com/arclabs561/infgeom"
documentation = "https://docs.rs/infgeom"
keywords = ["information-geometry", "fisher-rao", "divergence", "riemannian-geometry"]
categories = ["science", "mathematics"]

[dependencies]
thiserror = "2.0"
logp = "0.1.0"

[dev-dependencies]
proptest = "1.9"

